made sure that the createdBy of helpdeskticket and remark corresponds to the current user who's logged and who did the adding of the new ticket